--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="./css/main.css" />
     <title>HW-11</title>
   </head>
   <body>
-    <h1>Hello-JS-HW-11</h1>
+    <form class="search-form">
+      <input type="text" class="form-control" name="query" />
+      <button type="submit" class="btn">Search</button>
+    </form>
+
+    <span class="loader"></span>
+
+    <div class="card-container"></div>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
