--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,12 @@
   </head>
   <body>
     <form class="search-form">
-      <input type="text" class="form-control" name="query" />
+      <input
+        type="text"
+        class="input"
+        name="query"
+        placeholder="Search images..."
+      />
       <button type="submit" class="btn">Search</button>
     </form>
 
